<?xml version="1.0" encoding="utf-8"?>
<layout>

    <android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white">

        <com.patchpets.utils.HeaderBar
            android:id="@+id/headerBar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <View
            android:id="@+id/view"
            android:layout_width="match_parent"
            android:layout_height="@dimen/scale_2"
            android:background="@drawable/view_shadow"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/headerBar" />

        <com.patchpets.utils.MyTextView
            android:id="@+id/textView"
            android:layout_width="@dimen/scale_0"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/margin_30"
            android:layout_marginTop="@dimen/scale_20"
            android:text="@string/txt_resete_password"
            android:textColor="@color/tab_bg_color"
            android:textSize="@dimen/textSize_26"
            app:font="@string/font_poppins_bold"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/view" />

        <com.patchpets.utils.MyEditText
            android:id="@+id/etEmail"
            android:layout_width="@dimen/scale_0"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_45"
            android:background="@drawable/bg_blank"
            android:hint="@string/email"
            android:imeOptions="actionDone"
            android:inputType="textEmailAddress"
            android:textColor="@color/text_color"
            android:textColorHint="@color/text_hint_color"
            android:textCursorDrawable="@drawable/cursor_drawable"
            android:textSize="@dimen/textSize_32"
            app:font="@string/font_poppins_light"
            app:layout_constraintLeft_toLeftOf="@id/textView"
            app:layout_constraintRight_toRightOf="@id/textView"
            app:layout_constraintTop_toBottomOf="@+id/textView" />

        <View
            android:id="@+id/view_bottom_line_email"
            android:layout_width="@dimen/scale_0"
            android:layout_height="@dimen/scale_1"
            android:background="@color/email_text"
            app:layout_constraintLeft_toLeftOf="@id/textView"
            app:layout_constraintRight_toRightOf="@id/textView"
            app:layout_constraintTop_toBottomOf="@+id/etEmail" />

        <com.patchpets.utils.MyButton
            android:id="@+id/btnSubmit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/holo_green_light"
            android:paddingTop="@dimen/padding_10"
            android:paddingBottom="@dimen/padding_10"
            android:text="@string/submit"
            android:textColor="@color/view_line"
            android:textSize="@dimen/textSize_18"
            app:font="@string/font_poppins_bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent" />
    </android.support.constraint.ConstraintLayout>
</layout>