<?xml version="1.0" encoding="utf-8"?>
<layout>

    <android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.patchpets.utils.HeaderBar
            android:id="@+id/headerBar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <View
            android:id="@+id/view"
            android:layout_width="match_parent"
            android:layout_height="@dimen/scale_2"
            android:background="@drawable/view_shadow"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/headerBar" />

        <ListView
            android:id="@+id/contacts_list"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:divider="@android:color/transparent"
            android:padding="10dp"
            android:scrollbars="none"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/view">

        </ListView>

        <com.patchpets.utils.MyTextView
            android:id="@+id/tvEmpty"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:padding="@dimen/padding_10"
            android:text="@string/no_data_available"
            android:textColor="@color/number_not_selected_setupprofile"
            android:textSize="@dimen/textSize_14"
            android:visibility="gone"
            app:font="@string/font_poppins_regular" />

        <com.patchpets.utils.MyTextView
            android:id="@+id/tvSend"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_22"
            android:background="@color/colorPrimary"
            android:gravity="center"
            android:padding="@dimen/padding_10"
            android:text="@string/send"
            android:textAllCaps="true"
            android:textColor="@color/view_line"
            android:textSize="@dimen/textSize_20"
            app:font="@string/font_poppins_bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent" />
    </android.support.constraint.ConstraintLayout>
</layout>