<?xml version="1.0" encoding="utf-8"?>
<layout>

    <android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.patchpets.utils.HeaderBar
            android:id="@+id/headerBar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <View
            android:id="@+id/view"
            android:layout_width="match_parent"
            android:layout_height="@dimen/scale_2"
            android:background="@drawable/view_shadow"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/headerBar" />

        <com.patchpets.utils.MyTextView
            android:id="@+id/textView"
            android:layout_width="@dimen/scale_0"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/margin_24"
            android:layout_marginTop="@dimen/margin_18"
            android:layout_marginRight="@dimen/margin_24"
            android:text="@string/txt_loarnipsum"
            android:textColor="@color/tab_bg_color"
            android:textSize="@dimen/textSize_16"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/view"
            app:font="@string/font_poppins_regular" />

        <android.support.constraint.ConstraintLayout
            android:id="@+id/layout_bottom"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent">

            <com.patchpets.utils.MyButton
                android:id="@+id/btn_continue"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@android:color/darker_gray"
                android:paddingTop="@dimen/padding_10"
                android:paddingBottom="@dimen/padding_10"
                android:text="@string/str_countinue"
                android:textColor="@color/view_line"
                android:textSize="@dimen/textSize_18"
                app:font="@string/font_poppins_bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent" />

            <com.skyfishjy.library.RippleBackground xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:app="http://schemas.android.com/apk/res-auto"
                android:id="@+id/content"
                android:layout_width="@dimen/scale_120"
                android:layout_height="@dimen/scale_120"
                app:layout_constraintBottom_toTopOf="@+id/tv_understandandaccept"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:rb_color="@color/ripple_effect_color"
                app:rb_duration="3000"
                app:rb_radius="@dimen/scale_10"
                app:rb_rippleAmount="3"
                app:rb_scale="5"
                app:rb_strokeWidth="@dimen/scale_20"
                app:rb_type="fillRipple">

                <android.support.constraint.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <ImageView
                        android:id="@+id/ivchecked"
                        android:layout_width="@dimen/scale_50"
                        android:layout_height="@dimen/scale_50"
                        android:src="@drawable/select_contact_check_grey"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintLeft_toLeftOf="parent"
                        app:layout_constraintRight_toRightOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />
                </android.support.constraint.ConstraintLayout>
            </com.skyfishjy.library.RippleBackground>

            <View
                android:id="@+id/viewTxtBg"
                android:layout_width="0dp"
                android:layout_height="@dimen/scale_15"
                android:layout_marginBottom="@dimen/margin_12"
                android:alpha="0.5"
                android:background="@drawable/textview_shadow"
                android:visibility="gone"
                app:layout_constraintBottom_toBottomOf="@id/tv_understandandaccept"
                app:layout_constraintEnd_toEndOf="@id/tv_understandandaccept"
                app:layout_constraintStart_toStartOf="@id/tv_understandandaccept" />

            <com.patchpets.utils.MyTextView
                android:id="@+id/tv_understandandaccept"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/margin_24"
                android:layout_marginRight="@dimen/margin_24"
                android:text="@string/txt_understandaccept"
                android:textColor="@color/text_hint_color"
                android:textSize="@dimen/textSize_25"
                app:layout_constraintBottom_toTopOf="@+id/tv_these"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:font="@string/font_poppins_light" />

            <com.patchpets.utils.MyTextView
                android:id="@+id/tv_these"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/margin_20"
                android:text="@string/txt_these"
                android:textColor="@color/text_hint_color"
                android:textSize="@dimen/textSize_20"
                app:layout_constraintBottom_toTopOf="@+id/btn_continue"
                app:layout_constraintLeft_toLeftOf="@id/tv_understandandaccept"
                app:layout_constraintRight_toLeftOf="@+id/tv_termscondition"
                app:font="@string/font_poppins_light" />

            <com.patchpets.utils.MyTextView
                android:id="@+id/tv_termscondition"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="@dimen/padding_5"
                android:text="@string/label_termscondition"
                android:textColor="@color/text_hint_color"
                android:textSize="@dimen/textSize_20"
                app:layout_constraintBottom_toBottomOf="@+id/tv_these"
                app:layout_constraintLeft_toRightOf="@id/tv_these"
                app:layout_constraintRight_toRightOf="@id/tv_understandandaccept"
                app:layout_constraintTop_toTopOf="@+id/tv_these"
                app:font="@string/font_poppins_light" />
        </android.support.constraint.ConstraintLayout>
    </android.support.constraint.ConstraintLayout>
</layout>