<?xml version="1.0" encoding="utf-8"?>
<layout>

    <android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.patchpets.utils.HeaderBar
            android:id="@+id/headerBar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:scrollbars="none"
            app:layout_constraintBottom_toTopOf="@+id/tvSubmit"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/headerBar">

            <android.support.constraint.ConstraintLayout
                android:id="@+id/clMain"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="@dimen/margin_20"
                android:layout_marginTop="@dimen/margin_25">

                <com.patchpets.utils.MyTextView
                    android:id="@+id/tvMakeSure"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/margin_10"
                    android:layout_marginRight="@dimen/margin_10"
                    android:text="@string/make_sure"
                    android:textColor="@color/view_line"
                    android:textSize="@dimen/textSize_26"
                    app:font="@string/font_poppins_bold"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <com.patchpets.utils.MyEditText
                    android:id="@+id/etCurrentPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/margin_5"
                    android:layout_marginTop="@dimen/margin_20"
                    android:background="@android:color/transparent"
                    android:hint="@string/current_password"
                    android:inputType="textPassword"
                    android:maxLength="25"
                    android:padding="@dimen/padding_10"
                    android:singleLine="true"
                    android:textColor="@color/text_color"
                    android:textColorHint="@color/text_hint_color"
                    android:textCursorDrawable="@drawable/cursor_drawable"
                    android:textSize="@dimen/textSize_32"
                    app:font="@string/font_poppins_light"
                    app:layout_constraintTop_toBottomOf="@+id/tvMakeSure" />

                <View
                    android:id="@+id/view1"
                    android:layout_width="0dp"
                    android:layout_height="@dimen/scale_1"
                    android:layout_margin="@dimen/margin_5"
                    android:background="@color/text_hint_color"
                    app:layout_constraintLeft_toLeftOf="@+id/etCurrentPassword"
                    app:layout_constraintRight_toRightOf="@+id/etCurrentPassword"
                    app:layout_constraintTop_toBottomOf="@id/etCurrentPassword" />

                <com.patchpets.utils.MyEditText
                    android:id="@+id/etNewPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/margin_5"
                    android:layout_marginTop="@dimen/margin_10"
                    android:background="@android:color/transparent"
                    android:hint="@string/new_password"
                    android:inputType="textPassword"
                    android:maxLength="25"
                    android:padding="@dimen/padding_10"
                    android:singleLine="true"
                    android:textColor="@color/text_color"
                    android:textColorHint="@color/text_hint_color"
                    android:textCursorDrawable="@drawable/cursor_drawable"
                    android:textSize="@dimen/textSize_32"
                    app:font="@string/font_poppins_light"
                    app:layout_constraintTop_toBottomOf="@+id/view1" />

                <View
                    android:id="@+id/view2"
                    android:layout_width="0dp"
                    android:layout_height="@dimen/scale_1"
                    android:layout_margin="@dimen/margin_5"
                    android:background="@color/text_hint_color"
                    app:layout_constraintLeft_toLeftOf="@+id/etNewPassword"
                    app:layout_constraintRight_toRightOf="@+id/etNewPassword"
                    app:layout_constraintTop_toBottomOf="@id/etNewPassword" />

                <com.patchpets.utils.MyEditText
                    android:id="@+id/etConfirmPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/margin_5"
                    android:layout_marginTop="@dimen/margin_10"
                    android:background="@android:color/transparent"
                    android:hint="@string/confirm_password"
                    android:inputType="textPassword"
                    android:maxLength="25"
                    android:padding="@dimen/padding_10"
                    android:singleLine="true"
                    android:textColor="@color/text_color"
                    android:textColorHint="@color/text_hint_color"
                    android:textCursorDrawable="@drawable/cursor_drawable"
                    android:textSize="@dimen/textSize_32"
                    app:font="@string/font_poppins_light"
                    app:layout_constraintTop_toBottomOf="@+id/view2" />

                <View
                    android:layout_width="0dp"
                    android:layout_height="@dimen/scale_1"
                    android:layout_marginLeft="@dimen/margin_5"
                    android:layout_marginTop="@dimen/margin_10"
                    android:background="@color/text_hint_color"
                    app:layout_constraintLeft_toLeftOf="@+id/etConfirmPassword"
                    app:layout_constraintRight_toRightOf="@+id/etConfirmPassword"
                    app:layout_constraintTop_toBottomOf="@id/etConfirmPassword" />
            </android.support.constraint.ConstraintLayout>
        </ScrollView>

        <View
            android:id="@+id/view"
            android:layout_width="match_parent"
            android:layout_height="@dimen/scale_2"
            android:background="@drawable/view_shadow"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/headerBar" />

        <com.patchpets.utils.MyTextView
            android:id="@+id/tvSubmit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_22"
            android:background="@color/colorPrimary"
            android:gravity="center"
            android:padding="@dimen/padding_10"
            android:text="@string/cp_submit"
            android:textAllCaps="true"
            android:textColor="@color/view_line"
            android:textSize="@dimen/textSize_20"
            app:font="@string/font_poppins_bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent" />
    </android.support.constraint.ConstraintLayout>
</layout>